Salvar e carregar projeto (.gproject)
Adicionado a possibilidade de salvar o estado atual do projeto em um arquivo para carrega-lo e continuar de onde parou

--- a/css/editor.css
+++ b/css/editor.css
@@ -154,6 +154,12 @@ select {
     filter: drop-shadow(3px 10px 15px rgba(0, 0, 0, 1));
 }
 
+#widget-fonts{
+    top:50%;
+    left:50%;
+    position: fixed;
+}
+
 .widget-sm {
     border-radius: 5px;
     line-height: 1;
@@ -216,6 +222,10 @@ textarea:focus {
 
 .widget-black {
     background-color: rgba(0, 0, 0, 0.60);
+    color: white;
+}
+.widget-gray {
+    background: rgba(47, 51, 54, 1);
     color: white;
 }
 
