--- a/css/editor.css
+++ b/css/editor.css
@@ -103,7 +103,7 @@ body {
 }
 
 .slidecontainer2::-webkit-scrollbar-thumb {
-    background-color: rgba(255, 216, 67, 0.2);
+    background-color: #FFD843;
     border-radius: 10px;
 }
 
