--- a/css/style.css
+++ b/css/style.css
@@ -82,12 +82,14 @@ body::after {
 
 #layers {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   gap: 10px;
   width: 100%;
   list-style-type: none;
-  align-items: start;
-
+  align-items: center;
+  justify-content: center;
+  margin: 0 !important;
+  padding: 0 !important;
 }
 
 .btn-layers {
@@ -116,25 +118,66 @@ body::after {
 .ui-sortable-placeholder {
   background-color: rgba(200, 200, 200, 0.5);
   border: 2px dashed #FFD843;
-  height: 80px;
-  min-width: 100%;
   margin: 0;
   border-radius: 5px;
 }
+.check-visible{
+  display:none;
 
+}
+
+.pages-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.pages-wrapper{
+  position: absolute;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+    align-items: center;
+  justify-content: center;
+  bottom:0px;
+  left:50%;
+  padding: 10px;
+  overflow: scroll;
+  transform: translateX(-50%);
+  background: rgba(47, 51, 54, 0.5);
+  background-blend-mode:darken;
+}
+
+
+.btn-add-layer{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100px;
+  height: 70px;
+  border-radius: 5px;
+  background-color: rgba(66, 67, 68, 1);
+  outline: 0;
+  color: white;
+  border: 0;
+  font-size: 26px;
+}
 .layer {
   outline: none;
-  height: 80px;
-  width: 100%;
+  position: relative;
+  width: 100px;
+  height: 70px;
   font-size: 16px;
   color: #6c757d;
-  background: rgba(0, 0, 0, 0.0);
+  background: rgba(255, 255, 255, 0.0);
+  border: 1px solid rgba(255, 255, 255, 0.095);
+  border-radius: 5px;
+  padding: 5px;
+  cursor: move;
   border-radius: 5px;
   display: flex;
   align-items: center;
-  border: 1px solid rgba(255, 255, 255, 0.095);
-  padding: 0px 10px;
-  cursor: move;
+  justify-content: center;
 }
 
 .btn-text {
@@ -143,7 +186,7 @@ body::after {
 }
 
 .layer.active {
-  background-color: rgb(66, 67, 68);
+  border: 1px solid rgba(243, 219, 4, 1);
 }
 
 .draw-mode.active {
@@ -152,9 +195,9 @@ body::after {
 }
 
 .layer-img {
-  width: 40px;
-  height: 40px;
-  margin-right: 10px;
+  max-width:100%;
+  border-radius: 5px;
+  max-height: 100%;
 }
 
 .upload-div {
@@ -250,10 +293,15 @@ body::after {
   object-fit: cover;
   margin: 2px;
 }
-
+.item-background{
+  width: 100%;
+  margin: 2px;
+}
 .layer-name {
-  flex-grow: 1;
-  text-align: center;
+  position: absolute;
+  bottom: 5px;
+  color: white; 
+  mix-blend-mode: difference
 }
 
 .layer:focus {
@@ -280,10 +328,6 @@ body::after {
 .layers {
 
   width: 250px;
-}
-
-.layers i {
-  width: 10px !important;
 }
 
 .col-widget {
@@ -325,7 +369,7 @@ body::after {
   overflow: hidden;
   justify-content: center;
   align-items: center;
-  background: rgba(47, 51, 54, 0.5);
+  background: #232527;
   border-radius: 5px;
   color: rgba(255, 255, 255, 0.8);
   position: relative;
@@ -385,7 +429,6 @@ body::after {
   display: flex;
   overflow: hidden;
   height: 90%;
-  border: 1px solid rgba(255, 255, 255, 0.095);
   border-left: 0;
   border-right: 0;
 
@@ -397,7 +440,6 @@ body::after {
   position: relative;
   overflow-x: hidden;
   overflow-y: scroll;
-  border:1px;
   flex-direction: column;
   height: 100%;
 
@@ -814,7 +856,9 @@ body::after {
     opacity: 0 !important;
     display: none !important;
   }
-  
+  .footer {
+    display: none !important;
+  }
   .logo{
     display: flex;
     width: 70px;
@@ -1060,12 +1104,14 @@ body::after {
   align-items: center;
   width: 100%;
   padding:10px 10px 10px 10px;
+  background: rgba(47, 51, 54, 0.5);
 }
 .footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
+
 }
 .imageResizer .column2 label {
   font-size: 1.06rem;
