--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ body::after {
 }
 
 .ui-sortable-placeholder {
-  background-color: rgba(200, 200, 200, 0.5);
+  background-color: rgba(200, 200, 200, 0.0);
   border: 2px dashed #FFD843;
   margin: 0;
   border-radius: 5px;
@@ -162,6 +162,16 @@ body::after {
   border: 0;
   font-size: 26px;
 }
+
+.settings
+{
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+height: 100%;
+}
+
 .layer {
   outline: none;
   position: relative;
