--- a/css/editor.css
+++ b/css/editor.css
@@ -35,15 +35,25 @@ body {
 .btn-add-text {
     text-transform: uppercase;
     width: auto;
-    margin: 10px;
+    margin: 0px 5px 5px 0px;
     border: none;
     color: white;
     padding: 5px 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
+    height: 30px;
+    width: 30px;
     text-decoration: none;
-    display: inline-block;
     font-size: 16px;
     border-radius: 2px;
+    position: absolute;
+    right:0;
+    background: transparent;
+    bottom:0;
+    color:black;
+    font-size: 20px;
 }
 
 
@@ -209,12 +219,6 @@ select {
     color: black;
 }
 
-textarea {
-    margin-top: 20px;
-    min-height: 100px;
-    border: 1px solid rgba(0, 0, 0, 0.095);
-    padding: 10px;
-}
 
 textarea:focus {
     outline: none !important;
