--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,9 @@ body::after {
 
 .text-input {
   border-radius: 0.375rem;
+  min-height: 80px;
+  border: 1px solid rgba(0, 0, 0, 0.095);
+  padding: 10px;
 }
 
 .ui-sortable-placeholder {
