--- a/css/editor.css
+++ b/css/editor.css
@@ -52,8 +52,9 @@ body {
     right:0;
     background: transparent;
     bottom:0;
-    color:black;
-    font-size: 20px;
+    color:#c0a22c;
+    font-size: 26px;
+    margin:10px;
 }
 
 
