--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,7 @@ body::after {
   min-height: 80px;
   border: 1px solid rgba(0, 0, 0, 0.095);
   padding: 10px;
+  resize: none;
 }
 
 .ui-sortable-placeholder {
