--- a/css/style.css
+++ b/css/style.css
@@ -185,7 +185,19 @@ align-items: center;
 justify-content: center;
 height: 100%;
 }
-
+.btn-confirm {
+  text-transform: uppercase;
+  width: auto;
+  margin: 10px;
+  border: none;
+  color: white;
+  padding: 5px 5px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 2px;
+}
 .layer {
   outline: none;
   position: relative;
