--- a/css/style.css
+++ b/css/style.css
@@ -235,6 +235,7 @@ height: 100%;
   max-width:100%;
   border-radius: 5px;
   max-height: 100%;
+  object-fit: contain !important;
 }
 
 .upload-div {
@@ -812,7 +813,7 @@ height: 100%;
   overflow: auto;
   align-items: center;
   justify-content: center;
-  background: #232527;
+  background: #23252700;
 }
 
 .preview-img::-webkit-scrollbar {
@@ -919,7 +920,7 @@ height: 100%;
     display: none !important;
   }
   .footer {
-    display: none !important;
+
   }
   .logo{
     display: flex;
@@ -1010,19 +1011,27 @@ height: 100%;
     flex-wrap: wrap-reverse;
 
   }
-
-  .wrapper .editor-panel {
-    justify-content: flex-start;
-    flex-direction: row;
-    height: 100px;
-    overflow-x: auto;
-    margin: 20px 0px 20px 0px;
-    width: 100%;
+  .footer{
+    display: none !important;
   }
-
+  .pages-wrapper{
+    transform:translate(-50%,-55%)
+ 
+  }
+  .wrapper .editor-panel {
+    justify-content: space-between;
+    flex-direction: row;
+    height: 70px;
+    overflow-x: auto;
+    width: 100%;
+    position:fixed;
+    bottom:0;
+    left:0;
+    background-color: rgba(47, 51, 54, 0.5);
+  }
   .wrapper .preview-img {
-    width: auto;
-    height: auto;
+    width: 100%;
+    height: 100%;
     margin-left: 0px;
     margin-right: 0px;
 
