--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,8 @@ body::after {
   background-color: rgba(200, 200, 200, 0.0);
   border: 1px solid #FFD843;
   margin: 0;
+  height: 64px;
+  width: 108px;
   border-radius: 5px;
 }
 .check-visible{
@@ -142,14 +144,12 @@ body::after {
 }
 
 .pages-container{
-  display: flex;
-  justify-content: center;
-  align-items: center;
+
 }
 
 .pages-wrapper{
   position: absolute;
-  width: 100%;
+  width:100%;
   display: flex;
   flex-direction: row;
     align-items: center;
@@ -168,8 +168,8 @@ body::after {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100px;
-  height: 70px;
+  width: 108px;
+  height: 64px;
   border-radius: 5px;
   background-color: rgba(66, 67, 68, 1);
   outline: 0;
@@ -202,8 +202,9 @@ height: 100%;
 .layer {
   outline: none;
   position: relative;
-  width: 100px;
-  height: 70px;
+  width: 108px;
+  height: 64px;
+
   font-size: 16px;
   color: #6c757d;
   background: rgba(255, 255, 255, 0.0);
@@ -899,7 +900,24 @@ height: 100%;
 .btn-mini-wrapper{
   text-align: end;
 }
+.btn-export-wrapper{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 80px;
+  height: 30px;
+  border-radius: 5px;
+  padding: 5px;
+  text-align: end;
+  color: #000 !important;
+  font-size: 14px;
+  cursor: pointer;
+}
+.btn-export-wrapper span{
 
+  font-size: 18px;
+  margin-right: 3px;
+}
 .btn-yellow:hover {
   color: black;
   background: #ddbe3f;
@@ -929,7 +947,9 @@ height: 100%;
     justify-content: center;
     align-items: center;
   }
-
+  .pages-wrapper{
+    justify-content:flex-start;
+  }
   .row2{
     padding:0px !important;
   }
@@ -1015,8 +1035,8 @@ height: 100%;
     display: none !important;
   }
   .pages-wrapper{
-    transform:translate(-50%,-55%)
- 
+    transform:translate(-50%,-55%);
+    justify-content:flex-start;
   }
   .wrapper .editor-panel {
     justify-content: space-between;
