--- a/css/style.css
+++ b/css/style.css
@@ -985,7 +985,7 @@ height: 100%;
 
   .wrapper .preview-img {
     width: 100vw;
-    height: 70vh;
+    height: 100%;
     margin-left: 0px;
     margin-right: 0px;
     object-fit: contain;
