--- a/css/style.css
+++ b/css/style.css
@@ -160,7 +160,7 @@ body::after {
   overflow: auto;
   transform: translateX(-50%);
   background: rgba(47, 51, 54, 0.5);
-  background-blend-mode:darken;
+  background-blend-mode: screen;
 }
 
 
@@ -523,7 +523,6 @@ height: 100%;
 }
 .container2 .wrapper {
   display: flex;
-  overflow: scroll;
   height: 90%;
   border-left: 0;
   border-right: 0;
