--- a/css/style.css
+++ b/css/style.css
@@ -286,13 +286,68 @@ height: 100%;
 
 }
 
-.background-btn-area {
+.model-btn-area {
   height: 300px;
   overflow-y: auto;
   margin-top: 5px;
 }
 
-.background-btn-area .item {
+
+.list-btn-area .item {
+  cursor: pointer;
+  display: block;
+  position: relative;
+  float: left;
+  overflow: hidden;
+  -webkit-transition: all .3s ease-out;
+  transition: all .3s ease-out;
+  margin: 0 auto;
+
+}
+
+.list-btn-area .item:hover
+{
+  background-color: #aaa;
+}
+
+.list-btn-area {
+  height: 300px;
+  overflow-y: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start;
+  margin-top: 5px;
+}
+
+.list-btn-area .item img {
+  cursor: pointer;
+  width: 128px;
+  height: 128px;
+  object-fit: contain;
+  border-radius: 5px;
+}
+.list-btn-area .item:hover > .image-autor {
+  display: block;
+}
+.input-search{
+  z-index: 999999999999999999999999999;
+  position:relative;
+}
+
+.search-icon{
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  right: 0;
+  top:50%;
+  transform: translateY(-50%);
+  text-align: center;
+  color:black;
+  font-size: 22px;
+}
+
+.model-btn-area .item {
   cursor: pointer;
   width: 50%;
   height: 100px;
@@ -326,13 +381,28 @@ height: 100%;
   left: 5px;
 }
 
+
+.image-autor{
+  position: absolute; 
+  left: 0; 
+  right: 0; 
+  margin-inline: auto; 
+  width: fit-content;
+  bottom:20px;
+  font-size:10px;
+  display: none;
+}
+
+.image-autor a{
+  color: #8abbff;
+}
 .images-btn-area .item img {
   width: 100%;
   height: 100px;
   object-fit: cover;
   margin: 2px;
 }
-.item-background{
+.item-model{
   width: 100%;
   margin: 2px;
 }
@@ -341,9 +411,8 @@ height: 100%;
   width: 100%;
   margin: 0;
   padding: 10px;
-  background: rgba(47, 51, 54, 0.5);
+  border-bottom: 1px solid rgb(66, 67, 68);
 }
-
 .layer-name {
   position: absolute;
   bottom: 5px;
@@ -442,8 +511,8 @@ height: 100%;
 }
 
 .editor-panel::-webkit-scrollbar {
-  width: 3px;
-  height: 3px;
+  width: 2px;
+  height: 2px;
   background-color: transparent;
 }
 
