fix: tentatica de arrumar erro CORS

--- a/css/editor.css
+++ b/css/editor.css
@@ -172,7 +172,6 @@ select {
 }
 
 .widget-sm {
-    border-radius: 5px;
     line-height: 1;
     color: white;
     display: none;
@@ -181,7 +180,13 @@ select {
     margin: 0px;
     filter: drop-shadow(3px 10px 15px rgba(0, 0, 0, 1));
 }
+.b-r{
+    border-radius: 0px 5px 5px 0px;
+}
 
+.b-l{
+    border-radius: 5px 0px 0px 5px;  
+}
 .widget-lg {
     border-radius: 5px;
     line-height: 1;
