feat: Adicionano mais fontes e input pra buscar fontes

--- a/css/style.css
+++ b/css/style.css
@@ -333,6 +333,7 @@ height: 100%;
 .input-search{
   z-index: 999999999999999999999999999;
   position:relative;
+  margin-bottom: 5px;
 }
 
 .search-icon{
