--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ body {
   justify-content: center;
   background: #2F3336;
   font-family: "Helvetica Neue", Sans-Serif;
+  overscroll-behavior-y: none;
 }
 body::after {
   content: "";
@@ -1086,7 +1087,7 @@ height: 100%;
 
   .wrapper .preview-img {
     width: 100vw;
-    height: 75vh;
+    height:100%;
     margin-left: 0px;
     margin-right: 0px;
     object-fit: contain;
