--- a/css/style.css
+++ b/css/style.css
@@ -356,6 +356,10 @@ height: 100%;
   background-color: #aaa;
 }
 
+.slider-opacity{
+  width: 100%;
+}
+
 .list-btn-area {
   height: 300px;
   overflow-y: auto;
